--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout
+      uses: actions/checkout@v3
       with:
         repository: ${{ github.repository }}
         path: ${{ env.APP_DIR }}
