👷 Update artifact output

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,5 +27,5 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: out
-        path: ${{ env.APP_DIR }}/out/
+        name: download-me
+        path: ${{ env.APP_DIR }}/dist/
