--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,13 +16,20 @@ jobs:
         repository: ${{ github.repository }}
         path: ${{ env.APP_DIR }}
 
-    - name: Install dependencies
-      working-directory: ${{ env.APP_DIR }}
-      run: pip install -r requirements.txt
+    - name: Install wine
+      run: apt install wine
 
-    - name: Build
-      working-directory: ${{ env.APP_DIR }}
-      run: python ./scripts/build.py
+    - name: Download Python for windows
+      run: wget https://www.python.org/ftp/python/3.11.3/python-3.11.3-amd64.exe
+
+    - name: Install Python for windows
+      run: wine python-3.11.3-amd64.exe /quiet InstallAllUsers=1 PrependPath=1 Include_test=0
+
+    - name: Install app dependencies for windows
+      run: wine pip.exe install -r ${{ env.APP_DIR }}/requirements.txt
+
+    - name: Build Windows executable
+      run: wine python.exe ${{ env.APP_DIR }}/scripts/build.py
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
