--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build app
     runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, '(lin)')"
     steps:
     - name: Checkout
       uses: actions/checkout@v3
