--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build app
     runs-on: windows-latest
+    if: "contains(github.event.head_commit.message, '(win)')"
     steps:
     - name: Checkout
       uses: actions/checkout@v3
